# post_ocr_correction

./: .gitattributes  .gitignore  .gitmodules  README.md  download_data.py  requirements.txt  setup.cfg
data/: create_folders.py  readme.md
data/bg/: model_bg.arch  model_bg.pt
data/cz/: model_cz.arch  model_cz.pt
data/de/: model_de.arch  model_de.pt
data/en/: model_en.arch  model_en.pt
data/es/: model_es.arch  model_es.pt
data/fr/: model_fr.arch  model_fr.pt
data/nl/: model_nl.arch  model_nl.pt
data/pl/: model_pl.arch  model_pl.pt
data/sl/: model_sl.arch  model_sl.pt
evaluate/: evaluate.sh  final_results.ipynb  run_evaluation.py
evaluate/csv/: evaluation_bg.csv  evaluation_cz.csv  evaluation_de.csv  evaluation_en.csv  evaluation_es.csv  evaluation_fr.csv  evaluation_nl.csv  evaluation_pl.csv  evaluation_sl.csv
lib/: metrics.py  ocr_correction.py
lib/post_ocr_correction/: __init__.py  correction.py  metrics.py
notebooks/bg/: 0_exploration.ipynb  1_preprocessing.ipynb  2_baseline.ipynb  3_script_baseline.ipynb  4_experiments_baseline.ipynb  5_test_set.ipynb
notebooks/cz/: 0_exploration.ipynb  1_preprocessing.ipynb  2_baseline.ipynb  3_script_baseline.ipynb  5_test_set.ipynb  (+1 more)
tests/: full_evaluation.py  import.py  load_model.py  metrics.py  minimal.py
train/: launch_experiments_bg.py  launch_experiments_cz.py  launch_experiments_de.py  launch_experiments_en.py  launch_experiments_es.py  launch_experiments_fr.py  launch_experiments_nl.py  launch_experiments_pl.py  launch_experiments_sl.py
tutorials/: load_model.ipynb  new_model.ipynb
(+43 files in other folders)
