[metadata]
name = post_ocr_correction
version = 0.0.1
author = Juan Ramirez-Orta
author_email = jarobyte91@gmail.com
description = Source code for the paper "Post-OCR Document Correction with large Ensembles of Character Sequence Models" 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jarobyte91/post_ocr_correction
project_urls =
    Bug Tracker = https://github.com/jarobyte91/post_ocr_correction/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    
[options]
package_dir =
    = lib
packages = find:

install_requires =
    pytorch_beam_search>1.2,<2
    python-Levenshtein
    requests

[options.packages.find]
where = lib
